fixed more spacing, added bolder font to p tags, 'made what they offer' text more distinguishable in team page

--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -4,7 +4,7 @@
 
 .post,
 .page {
-	margin: 0;
+	margin: 2rem 0;
 }
 
 .updated:not(.published) {
